--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <div class="content-nav">
-            <img src="logo_tradeview_full_dark.svg" alt="">
+            <img src="TVM_Financial_Advisors_Color_Logo.png" alt="">
             <div class="links">
                 <a href="http://www.tradeviewforex.com/"  target="_blank">FOREX</a>
                 <a href="https://www.tradeviewstocks.com/" target="_blank">STOCKS</a>
                 <a href="http://www.tradegatehub.com/" target="_blank">TradeGATEHub</a>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <div class="logo-white">
-        <img src="logo_white.svg" alt="">
+        <img src="TVM_Financial_Advisors_Color_Logo.png" alt="">
     </div>
 
     <section>
         <h3>Our Awesome New Site is</h3>
         <h1>Coming Soon</h1>
-        <div class="btns">
+        <!-- <div class="btns">
             <a class="btn-red" href="https://www.tradeviewforex.com/accounts" target="_blank">Start trading now</a>
             <a class="btn-white" href="https://www.tradeviewforex.com/software" target="_blank">Try a free demo</a>
-        </div>
+        </div> -->
     </section>
     
 </body>
